--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sopha.cc</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>sopha.cc</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>This is a temporary page. Website coming soon...</h1>
+  <h1>sopha.cc </h1>
+  <h2>Welcome to the future home of all projects created by Soph (TheMaid)</h2>
+  <p>For now the website is pretty bare, as I am in the process of moving coding projects onto github, and production
+    on 'content creation'. As for what you can expect, small coding projects, video game mods, and video passion
+    projects will be coming to the site soon</p>
+  <h2>For now here's where I'm at: </h2>
+  <a href="https://www.youtube.com/@TheMaid__/"> youtube</a>
+  <br>
+  <a href="https://github.com/The-Maid/"> github</a>
+  <br>
+  <a href="https://bsky.app/profile/sopha.cc"> bluesky</a>
 </body>
+
 </html>
