Backend reformatting and adding site logos.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>sopha.cc</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -15,10 +15,13 @@
     on 'content creation'. As for what you can expect, small coding projects, video game mods, and video passion
     projects will be coming to the site soon</p>
   <h2>For now here's where I'm at: </h2>
+  <img src="images/youtube.png" alt="youtube logo" height="30px">
   <a href="https://www.youtube.com/@TheMaid__/"> youtube</a>
   <br>
+  <img src="images/github-mark-white.png" alt="github logo" height="30px">
   <a href="https://github.com/The-Maid/"> github</a>
   <br>
+  <img src="images/bluesky.png" alt="bluesky logo" height="30px">
   <a href="https://bsky.app/profile/sopha.cc"> bluesky</a>
 </body>
 
