rework style and implement blog page

--- a/index.html
+++ b/index.html
@@ -2,27 +2,47 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>sopha.cc</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css" />
 </head>
 
+<header>
+  <a href="/">
+    <p class="title">sopha.cc</p>
+  </a>
+  <nav>
+    <!-- List Order is reversed to how it appears in navigation -->
+    <ul>
+      <li> <a href="https://bsky.app/profile/sopha.cc"> <img src="/images/bluesky.png" alt="bluesky logo" /></a> </li>
+      <li> <a href="https://www.youtube.com/@TheMaid__/"> <img src="/images/youtube.png" alt="youtube logo" /></a> </li>
+      <li> <a href="https://github.com/The-Maid/"> <img src="/images/github-mark-white.png" alt="github logo" /></a> </li>
+      <li> <a href="/pages/blog"> blog </a> </li>
+
+    </ul>
+  </nav>
+  <br>
+</header>
+
+
 <body>
-  <h1>sopha.cc </h1>
-  <h2>Welcome to the future home of all projects created by Soph (TheMaid)</h2>
-  <p>For now the website is pretty bare, as I am in the process of moving coding projects onto github, and production
-    on 'content creation'. As for what you can expect, small coding projects, video game mods, and video passion
-    projects will be coming to the site soon</p>
-  <h2>For now here's where I'm at: </h2>
-  <img src="images/youtube.png" alt="youtube logo" height="30px">
-  <a href="https://www.youtube.com/@TheMaid__/"> youtube</a>
-  <br>
-  <img src="images/github-mark-white.png" alt="github logo" height="30px">
-  <a href="https://github.com/The-Maid/"> github</a>
-  <br>
-  <img src="images/bluesky.png" alt="bluesky logo" height="30px">
-  <a href="https://bsky.app/profile/sopha.cc"> bluesky</a>
+  <div id="introduction">
+    <h2>
+      Welcome to the future home of all projects created by Soph (TheMaid)
+    </h2>
+    <p>
+      For now the website is pretty bare, as I am in the process of moving
+      coding projects onto github, and production on 'content creation'.
+      <br>
+      As for what you can expect, small coding projects, video game mods, and video
+      passion projects will be coming to the site soon.
+      <br> <br>
+      As of now most of my finished projects are available on github eventually they will have dedicated spot here on
+      this
+      website however
+    </p>
+  </div>
 </body>
 
 </html>
