remove reference to index page on blog page.

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -9,7 +9,7 @@
 </head>
 
 <header>
- <a href="/index"> <p class="title">sopha.cc</p></a>
+ <a href="/"> <p class="title">sopha.cc</p></a>
   <nav>
     <!-- List Order is reversed to how it appears in navigation -->
     <ul>
