Update Homepage content & add footer to all pages.

--- a/index.html
+++ b/index.html
@@ -37,22 +37,42 @@
 		<hr />
 	</header>
 
-	<body>
+	<body id="homepage">
 		<div id="introduction">
-			<h2>
-				Welcome to the future home of all projects created by Soph (TheMaid)
-			</h2>
+			<h2>Hi, I'm Soph</h2>
 			<p>
-				For now the website is pretty bare, as I am in the process of moving
-				coding projects onto github, and production on 'content creation'.
-				<br />
-				As for what you can expect, small coding projects, video game mods, and
-				video passion projects will be coming to the site soon.
-				<br />
-				<br />
-				As of now most of my finished projects are available on github
-				eventually they will have dedicated spot here on this website however
+				Welcome to sopha.cc, the premiere home for all of my projects, and
+				anything else I find interesting. I'm still very much a beginner
+				programmer trying to work things out. Curently undergoing a bachelor's
+				degree in cyber security. To take a look at my current projects either
+				check out the projects page or head over to my github.
 			</p>
+			<figure>
+				<img
+					src="/images/profile.png"
+					alt="art by @allstarava on all platforms of soph with a pidove"
+				/>
+				<figcaption>
+					art by
+					<a href="https://bsky.app/profile/did:plc:uihhkh7roqtv6clck62mri7a"
+						>@allstarava</a
+					>
+				</figcaption>
+			</figure>
 		</div>
+
+		<footer>
+			<p>
+				You are free to use any of the content on this website without any
+				liscensing of any kind.
+			</p>
+			<p>
+				Come hang out with me and some awesome people in the
+				<a href="https://discord.gg/XKrUJE5ya4"
+					>Voiddread Community Discord
+					<img src="/images/discord.png" alt="discord logo"
+				/></a>
+			</p>
+		</footer>
 	</body>
 </html>
