change styling in jackbox server

--- a/jackbox/index.html
+++ b/jackbox/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>Jackbox.TV</title>
+    <title>sopha.cc | Jackbox</title>
     <meta name="description" content="Jackbox.tv is your controller for all of the Jackbox Party Packs and standalone games. Make some weird memories.">
     <meta name="application-name" content="Jackbox.TV">
 
@@ -33,9 +33,9 @@
 
     <style>
         html {
-            background-color: #0a1420;
+            background-color: #6f0c72;
         }
-
+        
         .loader-status {
             position: absolute;
             top: 50%;
