updates github links and readme.md

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					/></a>
 				</li>
 				<li>
-					<a href="https://github.com/The-Maid/">
+					<a href="https://github.com/sopha-cc/">
 						<img src="/images/github-mark-white.png" alt="github logo"
 					/></a>
 				</li>
@@ -59,8 +59,8 @@
 					>
 				</figcaption>
 			</figure>
-			<br>
-			<br>
+			<br />
+			<br />
 			<a href="/jackbox">looking for jackbox?</a>
 		</div>
 
